--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@prisma/client": "^6.14.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "socket.io": "^4.8.1"
@@ -27,6 +28,7 @@
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.3.0",
-    "prettier": "3.6.2"
+    "prettier": "3.6.2",
+    "prisma": "^6.14.0"
   }
 }
