--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "rate-limiter-flexible": "^8.2.1",
     "socket.io": "^4.8.1",
     "zod": "^4.1.12"
   },
